--- a/recent_events.html
+++ b/recent_events.html
@@ -198,7 +198,7 @@
                     <a data-toggle="modal" href="#blog-w3ls13" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/sofiaso.jpegv" alt="Sofiaso" class="img-responsive">
+                                <figure><img src="RecentEventImage/sofiaso.jpeg" alt="Sofiaso" class="img-responsive">
                                 </figure>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
 
                     </ul>
                     <p class="blog-p1">
-                        STORIES of FITTING IN and STANDING OUT is an event conducted by IEEE MBCET SB on...
+                        STORIES of FITTING IN and STANDING OUT is an event conducted by IEEE MBCET SB on EngineersDay The speaker for the event...
                     </p>
                     <a data-toggle="modal" href="#blog-w3ls13" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
                         Read More</a>
@@ -219,7 +219,7 @@
                     <a data-toggle="modal" href="#blog-w3ls12" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="images/Hel.jpeg" alt="Walk " class="img-responsive"></figure>
+                                <figure><img src="images/Hel.jpeg" alt="Walk To Health" class="img-responsive"></figure>
                             </div>
                         </div>
                     </a>
@@ -229,6 +229,70 @@
                     <p class="blog-p1">The speaker was Dr. Rani Nallathamby, Associate professor, MBBS, MD, Believers Church Medical College. The session... </p>
                     <a data-toggle="modal" href="#blog-w3ls12" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read
                     More</a>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <!-- Row 4 -->
+        <div class="container gap">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls14" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/Techvistara.png" alt="Techvistara" class="img-responsive">
+                                </figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">
+                        <!-- Add a summary -->
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls14" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+                    <a data-toggle="modal" href="#blog-w3ls13" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/sofiaso.jpeg" alt="Sofiaso" class="img-responsive">
+                                </figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">
+                        STORIES of FITTING IN and STANDING OUT is an event conducted by IEEE MBCET SB on EngineersDay The speaker for the event...
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls13" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls12" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="images/Hel.jpeg" alt="Walk To Health" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">The speaker was Dr. Rani Nallathamby, Associate professor, MBBS, MD, Believers Church Medical College. The session... </p>
+                    <a data-toggle="modal" href="#blog-w3ls12" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read
+                        More</a>
                 </div>
             </div>
             <div class="clearfix"></div>
