--- a/recent_events.html
+++ b/recent_events.html
@@ -237,11 +237,10 @@
         <div class="container gap">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
-
-                    <a data-toggle="modal" href="#blog-w3ls14" class="blog-link4">
+                    <a data-toggle="modal" href="#blog-w3ls11" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/Techvistara.png" alt="Techvistara" class="img-responsive">
+                                <figure><img src="RecentEventImage/Get the git.jpeg" alt="IEEE Explore" class="img-responsive">
                                 </figure>
                             </div>
                         </div>
@@ -249,53 +248,14 @@
                     <ul class="social-w3layouts">
 
                     </ul>
-                    <p class="blog-p1">
-                        <!-- Add a summary -->
-                    </p>
-                    <a data-toggle="modal" href="#blog-w3ls14" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                    <p class="blog-p1">IEEE Computer Society Student Branch in association with the Department of Computer Science and Engineering...</p>
+                    <a data-toggle="modal" href="#blog-w3ls11" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> 
                         Read More</a>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="blog-agile dap" data-aos="zoom-in">
-                    <a data-toggle="modal" href="#blog-w3ls13" class="blog-link4">
-                        <div class="hover01 column">
-                            <div>
-                                <figure><img src="RecentEventImage/sofiaso.jpeg" alt="Sofiaso" class="img-responsive">
-                                </figure>
-                            </div>
-                        </div>
-                    </a>
-                    <ul class="social-w3layouts">
 
-                    </ul>
-                    <p class="blog-p1">
-                        STORIES of FITTING IN and STANDING OUT is an event conducted by IEEE MBCET SB on EngineersDay The speaker for the event...
-                    </p>
-                    <a data-toggle="modal" href="#blog-w3ls13" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
-                        Read More</a>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="blog-agile dap" data-aos="zoom-in">
-
-                    <a data-toggle="modal" href="#blog-w3ls12" class="blog-link4">
-                        <div class="hover01 column">
-                            <div>
-                                <figure><img src="images/Hel.jpeg" alt="Walk To Health" class="img-responsive"></figure>
-                            </div>
-                        </div>
-                    </a>
-                    <ul class="social-w3layouts">
-
-                    </ul>
-                    <p class="blog-p1">The speaker was Dr. Rani Nallathamby, Associate professor, MBBS, MD, Believers Church Medical College. The session... </p>
-                    <a data-toggle="modal" href="#blog-w3ls12" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
-                        Read
-                        More</a>
-                </div>
-            </div>
-            <div class="clearfix"></div>
+        </div>
+        <div class="clearfix"></div>
         </div>
     </section>
 
