--- a/recent_events.html
+++ b/recent_events.html
@@ -253,7 +253,83 @@
                         Read More</a>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+                    <a data-toggle="modal" href="#blog-w3ls10" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/genesis.jpg" alt="Genesis" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
 
+                    </ul>
+                    <p class="blog-p1">EMBS Society of IEEE SB MBCET in collaboration with Biomedical Researcher Group conducted Genesis...
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls10" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read
+                        More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls9" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/canva1.jpeg" alt="Canva" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">WiE society of the IEEE MBCET SB conducted an online graphic designing workshop and poster...
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls9" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read
+                                    More</a>
+                </div>
+            </div>
+        </div>
+        <!-- Row 5 -->
+        <div class="container gap">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+                    <a data-toggle="modal" href="#blog-w3ls8" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/What Next.jpg" alt="What Next" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+                    </ul>
+                    <p class="blog-p1"> What Next? is an event conducted by IEEE SB MBCET, in association with the Career Guidance and Placement Unit MBCET...</p>
+                    <a data-toggle="modal" href="#blog-w3ls8" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read
+                        More</a>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls12" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="images/Hel.jpeg" alt="Walk To Health" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">The speaker was Dr. Rani Nallathamby, Associate professor, MBBS, MD, Believers Church Medical College. The session... </p>
+                    <a data-toggle="modal" href="#blog-w3ls12" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                                Read
+                                More</a>
+                </div>
+            </div>
+            <div class="clearfix"></div>
         </div>
         <div class="clearfix"></div>
         </div>
